// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Html_MatchesSnapshot_True 1`] = `
<div>
    <h1>Hello Test</h1>
</div>
`;

exports[`Html_WithPassedPropToMatchesSnapshot_True 1`] = `
<div>
    <h1>Hello World!</h1>
</div>
`;
